[project]
name = "test_pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ybouila", email = "yannick.bouillard@inria.fr"},
]
dependencies = ["numpy>=2.2.0", "requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
